fixup! partially implement View2MdConvertCommand.java